--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.13.3",
     "moment": "^2.10.6",
     "sequelize": "^3.16.0",
-    "sqlite3": "^3.1.0"
+    "sqlite3": "^3.1.0",
+    "underscore": "^1.8.3"
   }
 }
