--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^1.4.2",
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "bootstrap": "^3.3.5",
     "client-sessions": "^0.7.0",
