--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "body-parser": "^1.14.1",
     "bootstrap": "^3.3.5",
     "client-sessions": "^0.7.0",
+    "crypto-js": "^3.1.6",
     "dblite": "^0.7.6",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "jsonwebtoken": "^5.7.0",
     "moment": "^2.10.6",
     "sequelize": "^3.16.0",
     "sqlite3": "^3.1.0",
